# trident-syscall-stubs

./: Cargo.toml  README.md
src/: invoke_context.rs  syscall_stubs.rs
trident-syscall-stubs-v1/: Cargo.toml
trident-syscall-stubs-v1/src/: lib.rs  syscall_stubs.rs
trident-syscall-stubs-v2/: Cargo.toml  Makefile
trident-syscall-stubs-v2/src/: invoke_context.rs  syscall_stubs.rs
trident-syscall-stubs-v3/: Cargo.toml
trident-syscall-stubs-v3/src/: syscall_stubs.rs
