[package]
name = "trident-syscall-stubs-v2"
authors = ["Ackee Blockchain Security <hello@ackee.xyz>"]
version = "0.0.2-rc.1"
edition = "2021"
repository = "https://github.com/Ackee-Blockchain/trident-syscall-stubs"
license-file = "../LICENSE"
readme = "../README.md"
description = "Implementation of syscall stubs for the Trident fuzzing framework."

[dependencies]
solana-timings = "2.2"
solana-sdk = "2.2"
solana-program-runtime = "2.2"
serde = { version = "1", default-features = false }
